se agrega boton

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                       <strong>Estado:</strong> En proceso
                     </div>
                     <button class="invoice-btn">Ver Factura</button>
+                    <button class="invoice-btn">Guia Pedido</button>
                   </div>
                 </div>
               </div>
