se agrega boton de pedido y se ponen con link botones de factura y rastreo de pedido

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <div class="detail-item">
                       <strong>Estado:</strong> En proceso
                     </div>
-                    <button class="invoice-btn">Ver Factura</button>
-                    <button class="invoice-btn">Guia Pedido</button>
+                    <button class="invoice-btn" onclick="window.location.href ='https://sistema.ncontrol.mx/PortalCliente/Comprobante40/DE2364C4-1CBB-9243-932F-3F5D394771F4'">Ver Factura</button>
+                    <button class="invoice-btn" onclick="window.location.href = 'https://www.paquetexpress.com.mx/rastreo/MEX01WWA194361'">Guia Pedido</button>
                   </div>
                 </div>
               </div>
